@@ -1,5 +1,5 @@
 /*
- * "$Id: configh.in,v 1.11.2.5 2000/06/18 00:38:37 bill Exp $"
+ * "$Id: configh.in,v 1.11.2.6 2000/11/20 15:44:17 easysw Exp $"
  *
  * Configuration file for the Fast Light Tool Kit (FLTK).
  * @configure_input@
@@ -129,12 +129,18 @@
 #define HAVE_SCANDIR 0
 
 /*
- * possibly missing sprintf-style functions:
+ * Possibly missing sprintf-style functions:
  */
 
 #define HAVE_VSNPRINTF 0
 #define HAVE_SNPRINTF 0
 #define HAVE_VSPRINTF 0
+
+/*
+ * String functions...
+ */
+
+#define HAVE_STRCASECMP 0
 
 /*
  * HAVE_SYS_SELECT_H:
@@ -153,5 +159,5 @@
 #define USE_POLL 0
 
 /*
- * End of "$Id: configh.in,v 1.11.2.5 2000/06/18 00:38:37 bill Exp $".
+ * End of "$Id: configh.in,v 1.11.2.6 2000/11/20 15:44:17 easysw Exp $".
  */
