@@ -1,5 +1,5 @@
 /*
- * "$Id: config.mingw,v 1.1.2.1 2000/06/13 20:33:35 mike Exp $"
+ * "$Id: config.mingw,v 1.1.2.2 2000/11/20 15:44:18 easysw Exp $"
  *
  * Configuration file for the Fast Light Tool Kit (FLTK).
  *
@@ -129,12 +129,18 @@
 #define HAVE_SCANDIR 0
 
 /*
- * possibly missing sprintf-style functions:
+ * Possibly missing sprintf-style functions:
  */
 
 #define HAVE_VSNPRINTF 0
 #define HAVE_SNPRINTF 0
 #define HAVE_VSPRINTF 0
+
+/*
+ * String functions...
+ */
+
+#define HAVE_STRCASECMP 1
 
 /*
  * HAVE_SYS_SELECT_H:
@@ -153,5 +159,5 @@
 #define HAVE_POLL 0
 
 /*
- * End of "$Id: config.mingw,v 1.1.2.1 2000/06/13 20:33:35 mike Exp $".
+ * End of "$Id: config.mingw,v 1.1.2.2 2000/11/20 15:44:18 easysw Exp $".
  */
